force-app/main/default/objects/Account_Plan_Mandatory__c/Account_Plan_Mandatory__c.object-meta.xml
<CustomObject>
    <label>Account Plan Mandatory</label>
    <nameField>
        <displayFormat>APM-{000000}</displayFormat>
        <label>Account Plan Mandatory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Mandatory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>