force-app/main/default/objects/Account_Plan_Mandatory__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>