force-app/main/default/objects/Account_Plan_Mandatory__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Step 1 Group Company</fullName>
            </value>
            <value>
                <fullName>Step 2 Customer Profile</fullName>
            </value>
            <value>
                <fullName>Step 3 Wallet By Domain - Domain I</fullName>
            </value>
            <value>
                <fullName>Step 3 Wallet By Domain - Domain II</fullName>
            </value>
            <value>
                <fullName>Step 3 Wallet By Domain - Domain III</fullName>
            </value>
            <value>
                <fullName>Step 3 Wallet By Domain - Domain IV</fullName>
            </value>
            <value>
                <fullName>Step 4 Product Strategy</fullName>
            </value>
            <value>
                <fullName>Step 5 Decision Map and Action Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>