force-app/main/default/objects/Account_Plan_Mandatory__c/fields/Required_Field__c.field-meta.xml
<CustomField>
    <fullName>Required_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Required Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>