force-app/main/default/objects/Account_Plan_Mandatory__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Domain__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Group of Company Profile</fullName>
            </value>
            <value>
                <fullName>Group Transaction Flow/Inter-company flow/Business flow</fullName>
            </value>
            <value>
                <fullName>Group&apos;s Revenue Contribution</fullName>
            </value>
            <value>
                <fullName>Group&apos;s 5 Forces Module</fullName>
            </value>
            <value>
                <fullName>Group Key Success Factors</fullName>
            </value>
            <value>
                <fullName>General Information</fullName>
            </value>
            <value>
                <fullName>Customer&apos;s Revenue Contribution</fullName>
            </value>
            <value>
                <fullName>Initiate Account Plan Wallet</fullName>
            </value>
            <value>
                <fullName>Collection Method (Domestic)</fullName>
            </value>
            <value>
                <fullName>Collection Method (Export)</fullName>
            </value>
            <value>
                <fullName>Collection Currency</fullName>
            </value>
            <value>
                <fullName>Payment Method (Domestic)</fullName>
            </value>
            <value>
                <fullName>Payment Method (Import)</fullName>
            </value>
            <value>
                <fullName>Payment Currency</fullName>
            </value>
            <value>
                <fullName>1) Operating Transaction</fullName>
            </value>
            <value>
                <fullName>2) Cash on Hand/Cash at Bank or Investment</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Credit Facility</fullName>
            </value>
            <value>
                <fullName>2.1 Credit Life Insurance</fullName>
            </value>
            <value>
                <fullName>Product Strategy</fullName>
            </value>
            <value>
                <fullName>Action Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>