force-app/main/default/objects/Account_Plan_Mandatory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SEQ__c</columns>
    <columns>NAME</columns>
    <columns>Domain__c</columns>
    <columns>Section__c</columns>
    <columns>Required_Field__c</columns>
    <columns>Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>